--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,32 @@
 ehthumbs.db
 Thumbs.db
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.venv/
+.env/
+virtualenv/
+pythonenv/
+.python-version
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+
 # Node.js
 node_modules/
 npm-debug.log
@@ -48,6 +74,13 @@ logs
 # Testing
 /coverage
 .nyc_output
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+.coverage
+.coverage.*
 
 # Dependency directories
 jspm_packages/
