--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,9 +23,9 @@ servers:
     options:
       expose: 8000
     proxy: false
-    # healthcheck:
-    #   path: /health/
-    #   port: 8000
+    healthcheck:
+      path: /health/
+      port: 8000
     
   # job:
   #   hosts:
