updates to env and dockerfile

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 OPENAI_API_KEY=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
 ANTHROPIC_API_KEY=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
 GEMINI_API_KEY=AIzaSyA0H1UxIcTf48ZS-BUHeamm0ztYtHn5Xgw
+
+DOCKER_REGISTRY_PASSWORD=Test0123!
+DOCKER_REGISTRY_TOKEN=jitin2pillai
+
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=lfg_dev
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=Test0123!
