--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -26,12 +26,24 @@ servers:
       expose: 8000
       health-cmd: "curl -f http://localhost:8000/health/"
     proxy: false
+    cmd: sh -c "python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
     
   # Uncomment and configure additional roles as needed.
   # job:
   #   hosts:
   #     - 192.168.0.1
   #   cmd: bin/jobs
+
+env:
+  secret:
+    - POSTGRES_HOST
+    - POSTGRES_PORT
+    - POSTGRES_DB
+    - POSTGRES_USER
+    - POSTGRES_PASSWORD
+    - OPENAI_API_KEY
+    - ANTHROPIC_API_KEY
+    - GEMINI_API_KEY
 
 registry:
   server: docker.io
@@ -44,9 +56,29 @@ builder:
   arch: amd64
 
 accessories:
+  postgres_db:
+    image: postgres:16-alpine
+    # host: 5.161.59.97
+    service: postgres_db
+    port: 5432
+    env:
+      clear:
+        POSTGRES_DB: easylogs_prod
+      secret:
+        - POSTGRES_USER
+        - POSTGRES_PASSWORD
+    options:
+      restart: always
+    directories:
+      - /root/postgres_data:/var/lib/postgresql/data
+    labels:
+      traefik.enable: false
+    roles:
+      - web
+
   traefik:
     image: traefik:v2.10
-    # host: 178.156.151.84
+    # host: 5.161.59.97
     service: traefik
     port: 443
     options:
