--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ requests==2.31.0
 pillow==10.1.0
 gunicorn==21.2.0
 anthropic==0.5.0
-google-generativeai==0.3.1 
+google-generativeai==0.3.1
+psycopg2-binary==2.9.9 
