improve chat streaming

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ POSTGRES_PORT=5432
 POSTGRES_DB=lfg_dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Test0123!
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=noreply@lfg.run
