--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,8 @@ pillow==10.1.0
 gunicorn==21.2.0
 anthropic==0.5.0
 google-generativeai==0.3.1
-psycopg2-binary==2.9.9 
+psycopg2-binary==2.9.9
+channels==4.0.0
+daphne==4.0.0
+channels-redis==4.1.0
+websockets==12.0 
