stage pods terminal functions

--- a/.env
+++ b/.env
@@ -15,3 +15,10 @@ EMAIL_PORT=587
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 DEFAULT_FROM_EMAIL=noreply@lfg.run
+
+# Kubernetes SSH Server Configuration
+K8S_SSH_HOST=178.156.174.242
+K8S_SSH_PORT=22
+K8S_SSH_USERNAME=root
+K8S_SSH_KEY_FILE=~/.ssh/id_rsa
+# K8S_SSH_KEY_PASSPHRASE=
