--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ pillow==10.1.0
 gunicorn==21.2.0
 anthropic==0.49.0
 psycopg2-binary==2.9.9
-channels==4.0.0
+channels>=4.0.0
 daphne==4.0.0
 channels-redis==4.1.0
 websockets==15.0.1
 google-genai==1.9.0
 stripe==7.9.0
+paramiko==3.3.1
+asgiref>=3.6.0
+kubernetes>=18.0.0
