save agent model, agent role, integrations

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ K8S_SSH_PORT=22
 K8S_SSH_USERNAME=root
 K8S_SSH_KEY_FILE=~/.ssh/id_rsa
 # K8S_SSH_KEY_PASSPHRASE=
+
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
