--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,7 @@ google-genai==1.9.0
 stripe==7.9.0
 paramiko==3.3.1
 asgiref>=3.6.0
-kubernetes>=18.0.0
+kubernetes>=28.1.0
+urllib3>=1.26.0
+pyyaml>=6.0
+websocket-client>=1.6.0 
